--- a/cata_service/src/main/resources/static/index.html
+++ b/cata_service/src/main/resources/static/index.html
@@ -18,6 +18,7 @@ href="css/myStyle.css" />
 				<li><a ui-sref="home" >Home </a></li>
 				<li><a ui-sref ="newProduit">newProduit</a></li>
 				<li><a  ui-sref="chercher">chercher</a></li>
+				<li><a ui-sref="delete" >supprimer  </a></li>
 			</ul>
 		</div>
 	</div>
